- audio apps *.desktop fixes (mostly: killed Application, new xdg submenus)
Changed files:
    prokyon3.desktop -> 1.3

--- a/prokyon3.desktop
+++ b/prokyon3.desktop
@@ -8,5 +8,5 @@ Exec=prokyon3
 Icon=
 Terminal=false
 Type=Application
-Categories=Application;AudioVideo;
+Categories=AudioVideo;
 # vi: encoding=utf-8
